Homepage overflow fixes

--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -65,12 +65,12 @@
 }
 
 .main-nav {
-    @include flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
+    @include media-breakpoint-up(lg) {
+        display: flex;
+    }
 
     .main-menu {
-        @include flex;
         margin: 0;
 
         li {
