--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -12,10 +12,11 @@
             //color: #1b1b1b;
 
             p {
-                width: 589px;
-                font-size: 20px;
-                letter-spacing: -1px;
-                line-height: 24px;
+                //font-style($family: 'SofiaPro-Regular', $size: false, $colour: $body-color, $weight: 400,  $lh: false, $ls: false);
+                @include font-style(false, 20px, false, false, 24px, -1px);
+                //font-size: 20px;
+                //letter-spacing: -1px;
+                //line-height: 24px;
             }
 
 
@@ -74,6 +75,7 @@
             background: url('../images/placeholder.jpg');
             background-repeat: no-repeat;
             background-size: cover;
+            background-position: center center;
             border-radius: 20px;
             position: relative;
             @include mask($lightestGrey, 1);
@@ -90,7 +92,6 @@
         }
 
         .choose-health-text {
-            width: $fullWidth / 1.8;
             color: $white;
             font-size: 27px;
             font-weight: 600;
